--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,7 +26,7 @@ jobs:
           npm run docs:build
           
     - name: deploy
-      uses: JamesIves/github-pages-deploy-action@v4
+      uses: JamesIves/github-pages-deploy-action@4
       with:
         ssh-key: ${{ secrets.DEPLOY_KEY }}
         branch: gh-pages
