--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,4 +30,4 @@ jobs:
       with:
         ssh-key: ${{ secrets.DEPLOY_KEY }}
         branch: gh-pages
-        folder: .vuepress/dist
+        folder: docs/.vuepress/dist
